--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
-        <activity android:name=".RoutesOrdersActivity"></activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings">
+        </activity>
+        <activity android:name=".RoutesOrdersActivity" />
         <activity android:name=".CountActivity" />
         <activity android:name=".RoutesActivity" />
         <activity android:name=".PdfActivity" />
@@ -29,7 +33,7 @@
         <activity android:name=".MainMenuActivity" />
         <activity android:name=".ProductsToLocationActivity" />
         <activity android:name=".LocationActivity" />
-        <activity android:name=".LoginActivity"/>
+        <activity android:name=".LoginActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
