Añadido seccion de devoluciones Implementado sistema de escaneo comun para todos los tipos de dispositivos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
+        <activity android:name=".RefundDetailsActivity"></activity>
+        <activity android:name=".RefundsActivity" />
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings">
-        </activity>
+            android:label="@string/title_activity_settings" />
         <activity android:name=".RoutesOrdersActivity" />
         <activity android:name=".CountActivity" />
         <activity android:name=".RoutesActivity" />
